objects/SBQQ__SubscribedAsset__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the subscribed asset record is active.</description>
        <inlineHelpText>Indicates whether the subscribed asset record is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetRootId__c</fullName>
        <description>The ID of the subscription or asset at the root of the bundle that contains the related asset</description>
        <formula>IF(NOT(ISBLANK(SBQQ__Asset__r.SBQQ__RevisedAsset__r.SBQQ__RootId__c)), SBQQ__Asset__r.SBQQ__RevisedAsset__r.SBQQ__RootId__c, IF(NOT(ISBLANK(SBQQ__Asset__r.SBQQ__RootId__c)), SBQQ__Asset__r.SBQQ__RootId__c, null))</formula>
        <inlineHelpText>The ID of the subscription or asset at the root of the bundle that contains the related asset</inlineHelpText>
        <label>Asset Root Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset being covered by a subscription.</description>
        <inlineHelpText>Asset being covered by a subscription.</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractId__c</fullName>
        <description>Identifies the contract for the subscription.</description>
        <formula>SBQQ__Subscription__r.SBQQ__Contract__c</formula>
        <inlineHelpText>Identifies the contract for the subscription.</inlineHelpText>
        <label>Contract Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Subscription__c</fullName>
        <description>Subscription that covers the asset.</description>
        <inlineHelpText>Subscription that covers the asset.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Subscribed Assets</relationshipLabel>
        <relationshipName>SubscribedAssets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__UsageEndDate__c</fullName>
        <formula>SBQQ__Asset__r.UsageEndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Usage End Date</label>
        <type>Date</type>
    </fields>
    <customHelpPage>SBQQ__SubscribedAssetHelp</customHelpPage>
    <description>Links a particular asset to the subscription that covers it.</description>
    <label>Subscribed Asset</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Subscribed Asset#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribed Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>